--- a/electron/index3.html
+++ b/electron/index3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-  <title>mStream Express Server</title>
+  <title>Fog Machine Server</title>
 
   <script src="js/materialize.min.js"></script>
   <link href="css/materialize.min.css" rel="stylesheet">
@@ -20,23 +20,15 @@
 </head>
 
 <body>
-  <div class="modal">
-    <div id="switcherModal">
-      <component :key="componentKey" v-bind:is="currentViewModal">
-      </component>
-    </div>
-  </div>
-
   <div class="main">
     <div class="main-left-col">
-      <!-- Buttons -->
       <div class="left-nav-menu-header">
         Configure
       </div>
       <ul class="left-nav-menu">
         <li id="nav-about" class="left-nav-button waves-effect waves-purple nav-selected">
-          <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 -1 24 24" fill="#fff"><path d="M4 2c-1.093 0-2 .907-2 2v18.406l1.719-1.687L6.438 18H20c1.093 0 2-.907 2-2V4c0-1.093-.907-2-2-2H4zm0 2h16v12H5.594l-.313.281L4 17.563V4zm7 2v2h2V6h-2zm0 3v5h2V9h-2z"/></svg>
-          <span>Get Started</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" height="28"><path fill="#FFA000" d="M38 12H22l-4-4H8c-2.2 0-4 1.8-4 4v24c0 2.2 1.8 4 4 4h31c1.7 0 3-1.3 3-3V16c0-2.2-1.8-4-4-4z"/><path fill="#FFCA28" d="M42.2 18H15.3c-1.9 0-3.6 1.4-3.9 3.3L8 40h31.7c1.9 0 3.6-1.4 3.9-3.3l2.5-14c.5-2.4-1.4-4.7-3.9-4.7z"/></svg>
+          <span>Web Directory</span>
         </li>
         <li id="nav-auto-dns" class="left-nav-button waves-effect waves-purple">
           <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path fill="#8c9eff" d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"/></svg>
@@ -83,7 +75,6 @@
     const apiEndpoint = 'https://api.mstream.io';
     const configFile = path.join(app.getPath('userData'), 'save/server-config.json');
     var loadJson = {};
-    var editThisUser;
     var bootFlag = false;
 
     // Open a tags in OS browser
@@ -134,113 +125,7 @@
       } catch(err) {}
     }
 
-
-
     window.onload = function () {
-      // Initialize Modal
-      var modalInstance = M.Modal.init(document.querySelectorAll('.modal'), { endingTop: '20%' });
-
-      Vue.component('folder-accordion', {
-        data: function() {
-          return {
-            instances: null,
-            directories: loadJson.folders,
-            resetFlag: false,
-            closeOverride: () => {
-              if (this.resetFlag) {
-                this.$parent.componentKey = !this.$parent.componentKey;
-              }
-            }
-          };
-        },
-        template: '\
-          <ul class="z-depth-1 collapsible-folders">\
-            <li v-for="(value, key, index) in directories">\
-              <div v-on:click="toggleOptions(index, $event)" class="collapsible-header">\
-                <div class="accordion-header-left">\
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="100%"><path fill="#FFA000" d="M38 12H22l-4-4H8c-2.2 0-4 1.8-4 4v24c0 2.2 1.8 4 4 4h31c1.7 0 3-1.3 3-3V16c0-2.2-1.8-4-4-4z"/><path fill="#FFCA28" d="M42.2 18H15.3c-1.9 0-3.6 1.4-3.9 3.3L8 40h31.7c1.9 0 3.6-1.4 3.9-3.3l2.5-14c.5-2.4-1.4-4.7-3.9-4.7z"/></svg>\
-                </div>\
-                <div class="accordion-header-right">\
-                  <div><b>{{key}}</b></div>\
-                  <div>{{value.root}}</div>\
-                </div>\
-              </div>\
-              <div class="collapsible-body clearfix">\
-                <div class="folder-button-group">\
-                  <a v-on:click="changeDirectory(value, key, index)" class="waves-effect waves-light btn">Change Directory</a>\
-                  <a v-on:click="deleteFolder(value, key, index)" class="waves-effect waves-light btn red">\
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="100%" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path fill="#FFF" d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"/><path fill="none" d="M0 0h24v24H0z"/></svg>\
-                  </a>\
-                </div>\
-              </div>\
-            </li>\
-          </ul>',
-        mounted: function () {
-          this.instances = M.Collapsible.init(document.querySelectorAll('.collapsible-folders'), { onCloseEnd: this.closeOverride });
-        },
-        beforeDestroy: function() {
-          this.instances[0].destroy();
-        },
-        methods: {
-          changeDirectory: function(value, key, index) {
-            dialog.showOpenDialog({properties: [ 'openDirectory']},  (selectedDirectory) => {
-              if(selectedDirectory == null ){
-                return;
-              }
-              loadJson.folders[key] = { root: selectedDirectory[0] };
-              fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
-              this.resetFlag = true;
-              this.instances[0].close(index);
-            });
-          },
-          deleteFolder: function(value, key, index) {
-            iziToast.question({
-              timeout: 20000,
-              close: false,
-              overlayClose: true,
-              overlay: true,
-              displayMode: 'once',
-              id: 'question',
-              zindex: 99999,
-              title: "Delete <b>'" + value.root + "'</b>?",
-              position: 'center',
-              buttons: [
-                ['<button><b>Delete</b></button>', (instance, toast) => {
-                  delete loadJson.folders[key];
-                  if(loadJson.users) {
-                    Object.keys(loadJson.users).forEach(user => {
-                      loadJson.users[user].vpaths = loadJson.users[user].vpaths.filter(e => {
-                        return ![key].includes(e);
-                      });
-                    });
-                  }
-
-                  fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
-                  this.resetFlag = true;
-                  this.instances[0].close(index);
-                  instance.hide({ transitionOut: 'fadeOut' }, toast, 'button');
-                }, true],
-                ['<button>Go Back</button>', (instance, toast) => {
-                  instance.hide({ transitionOut: 'fadeOut' }, toast, 'button');
-                }],
-              ]
-            });
-          },
-          toggleOptions: function(index, el) {
-            if(el.target.classList.contains('btn')){
-              return;
-            }
-
-            if(el.currentTarget.parentElement.classList.contains('active')){
-              this.instances[0].close(index);
-              return;
-            }
-
-            this.instances[0].open(index);
-          }
-        }
-      });
-
       const aboutView = Vue.component('about-view', {
         data() {
           return {
@@ -327,7 +212,7 @@
                       <div class="input-field">\
                         <input v-on:click="selectLogsPath($event)" v-model="lJson.logs" @blur="updateConfig()" id="server-logs-folder" type="text" class="active" required />\
                         <label class="active" for="server-logs-folder">Logs Folder</label>\
-                        <span class="helper-text">No logs written if this is empty</span>\
+                        <span class="helper-text">No logs written if this field is empty</span>\
                       </div>\
                     </div>\
                   </div>\
@@ -376,7 +261,7 @@
                     <div class="col s12">\
                       This feature is not enabled by default. You must provide your own SSL certificates to enable encryption.  SSL certificates can be registered for free with <a href="https://certbot.eff.org/">Certbot</a>\
                       <br><br>\
-                      mStream RPN takes care of registering certificates and configuring server encryption. <a href="https://mstream.io/reverse-proxy-network">Read more about it here</a>\
+                      Fog Machine RPN takes care of registering certificates and configuring server encryption. <a href="https://mstream.io/reverse-proxy-network">Read more about it here</a>\
                     </div>\
                   </div>\
                 </div>\
@@ -463,7 +348,7 @@
         template: '\
           <div class="ssl-choice card no-pad-bot">\
             <div v-on:click="goToAutoDns()" class="signup-button waves-effect waves-default">\
-              <p class="center bigger-text"><b>mStream RPN</b></p>\
+              <p class="center bigger-text"><b>Fog Machine RPN</b></p>\
               <svg height="88" width="100%" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"><path d="M46.698 33.004H31.99c-3.306 0-5.986 2.68-5.986 5.986v8.295c0 3.637 2.948 6.585 6.585 6.585H46.1c3.637 0 6.585-2.948 6.585-6.585V38.99C52.684 35.684 50.004 33.004 46.698 33.004zM49.547 47.588c0 1.93-1.564 3.494-3.494 3.494H32.635c-1.93 0-3.494-1.564-3.494-3.494v-8.302c0-1.93 1.564-3.494 3.494-3.494h13.419c1.93 0 3.494 1.564 3.494 3.494V47.588zM31.99 31.935h2.01V28.42c0-2.947 2.398-5.345 5.345-5.345 2.947 0 5.345 2.398 5.345 5.345v3.515h2.01c.574 0 1.133.071 1.668.201V28.42c0-4.975-4.047-9.022-9.022-9.022s-9.022 4.047-9.022 9.022v3.716C30.857 32.006 31.415 31.935 31.99 31.935z" fill="#3E4753"/><path d="M45.095,37.451H33.593c-1.287,0-2.331,1.043-2.331,2.331v7.311c0,1.287,1.043,2.331,2.331,2.331h11.503 c1.287,0,2.331-1.043,2.331-2.331v-7.311C47.426,38.494,46.382,37.451,45.095,37.451z M40.705,43.86v2.064 c0,0.748-0.612,1.361-1.361,1.361c-0.748,0-1.361-0.612-1.361-1.361V43.86c-0.599-0.426-0.991-1.126-0.991-1.918 c0-1.299,1.053-2.353,2.353-2.353c1.299,0,2.353,1.054,2.353,2.353C41.697,42.734,41.305,43.434,40.705,43.86z" fill="#2E7EB8"/><g><path d="M60.7,29.153c-1.119-1.406-2.581-2.503-4.224-3.19c-0.306-4.111-2.037-7.917-4.952-10.832 c-3.225-3.225-7.542-5.002-12.154-5.002c-5.136,0-9.986,2.323-13.291,6.292c-1.267-0.358-2.555-0.539-3.848-0.539 c-6.201,0-11.544,3.92-13.466,9.701C6.783,26.166,5,27.308,3.638,28.889C1.937,30.865,1,33.402,1,36.035 c0,5.957,4.846,10.803,10.803,10.803h2.839h8.154V42.25h-8.154h-2.839c-3.427,0-6.215-2.788-6.215-6.215 c0-3.173,2.246-5.796,5.341-6.238l1.571-0.224l0.344-1.549c0.988-4.446,4.848-7.552,9.386-7.552c1.27,0,2.546,0.263,3.792,0.782 l1.731,0.721l1.051-1.554c2.416-3.571,6.365-5.703,10.564-5.703c7.047,0,12.567,5.52,12.567,12.567v2.193l1.789,0.404 c2.842,0.642,4.768,3.145,4.684,6.086l-0.001,0.066c0,2.041-0.993,3.85-2.517,4.984v5.154c4.128-1.511,7.091-5.462,7.105-10.105 C63.061,33.55,62.246,31.095,60.7,29.153z" fill="#2E7EB8"/></g></svg>\
               <p class="signup-price">Sign Up / Login</p>\
             </div>\
@@ -531,7 +416,7 @@
               <div class="col s12">\
                 <div class="card">\
                   <div class="row row-mod">\
-                    <div class="section-header">mStream RPN Service</div>\
+                    <div class="section-header">Fog Machine RPN Service</div>\
                     <div class="col s12">\
                       <ul class="browser-default">\
                         <li>Get your own personal domain @ https://your-name.mstream.io</li>\
@@ -539,7 +424,7 @@
                         <li>State of the art \'Hole Punching\' software guarantees your server stays online as long as you have a working internet connection</li>\
                         <li>IP Obfuscation hides your IP address and adds an additional layer of security</li>\
                       </ul>\
-                      mStream RPN Service comes with everything you need to get your new server online in seconds. Think of it as your private cloud.\
+                      Fog Machine RPN Service comes with everything you need to get your new server online in seconds. Think of it as your private cloud.\
                     </div>\
                   </div>\
                 </div>\
@@ -576,19 +461,22 @@
                   password: this.password
                 }
               });
+              console.log(loginRes);
               const configRes = await axios({
                 method: 'get',
                 url: apiEndpoint + '/account/info',
                 headers: { 'x-access-token': loginRes.data.token, 'accept': 'application/json' },
                 responseType: 'json'
               });
+              console.log(configRes);
               loadJson.ddns = {
                 email: this.username,
                 password: this.password,
-                token: loginRes.body.token,
+                token: loginRes.data.token,
                 tested: true,
                 url: configRes.data.subdomain + '.' + configRes.data.domain
               };
+              console.log(loadJson);
               fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
               iziToast.success({
                 title: 'Logged In',
@@ -598,6 +486,7 @@
               vm.currentViewMain = 'auto-dns-logged-in-view';
               this.pending = false;
             } catch(err) {
+              console.log(err);
               this.pending = false;
               iziToast.warning({
                 title: 'Failed to Login',
@@ -615,7 +504,7 @@
             <div class="col s12">\
               <div class="card">\
                 <div class="row row-mod">\
-                  <div class="section-header">mStream RPN</div>\
+                  <div class="section-header">Fog Machine RPN</div>\
                   <div class="col s12">\
                     <div>You are logged in as: <b>{{loadJson.ddns.email}}</b></div>\
                     <div>Your Public URL: <b>https://{{loadJson.ddns.url}}</b></div>\
@@ -757,7 +646,7 @@
                   <div class="about-content-section">\
                     <div>This window will automatically close in <span id="countdown">30</span> seconds to save on memory</div>\
                     <br>\
-                    <div>Test mStream locally at: <a href="'+localhostAdd+'">'+localhostAdd+'</a></div>\
+                    <div>Test your server locally at: <a href="'+localhostAdd+'">'+localhostAdd+'</a></div>\
                   </div>\
                 </div>\
               </div>\
