--- a/electron/index3.html
+++ b/electron/index3.html
@@ -34,6 +34,10 @@
           <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path fill="#8c9eff" d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"/></svg>
           <span>Publish Online</span>
         </li>
+        <li id="nav-about" class="left-nav-button waves-effect waves-purple">
+          <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 -1 24 24" fill="#fff"><path d="M4 2c-1.093 0-2 .907-2 2v18.406l1.719-1.687L6.438 18H20c1.093 0 2-.907 2-2V4c0-1.093-.907-2-2-2H4zm0 2h16v12H5.594l-.313.281L4 17.563V4zm7 2v2h2V6h-2zm0 3v5h2V9h-2z"/></svg>
+          <span>About</span>
+        </li>
       </ul>
 
       <!-- Boot Server Button -->
@@ -89,6 +93,10 @@
       loadJson.port = 3000;
     }
 
+    if (!loadJson.server) {
+      loadJson.server = 'file';
+    }
+
     if(!loadJson.logs){
       loadJson.logs = path.join(app.getPath('userData'), 'save');
     }
@@ -137,13 +145,13 @@
                   <div class="row row-mod">\
                     <div class="section-header">Select Server</div>\
                   </div>\
-                  <div class="row row-mod">\
+                  <div class="row row-mod server-select-row">\
                     <div class="col s12 port-form-container">\
-                      <select  id="server-select">\
+                      <select v-model="lJson.server" id="server-select">\
                         <option value="" disabled>Supported Servers</option>\
-                        <option value="1" selected>Basic Web Server</option>\
-                        <option value="2">Bitwarden RS</option>\
-                        <option value="3">Minecraft Server</option>\
+                        <option value="file" selected>Basic Web Server</option>\
+                        <option value="bitwarden">Bitwarden RS</option>\
+                        <option value="minecraft">Minecraft Server</option>\
                       </select>\
                       <label for="new-user-dirs">Select Server Type</label>\
                     </div>\
@@ -165,6 +173,24 @@
                   </div>\
                 </div>\
               </div>\
+              <div class="col s12">\
+                <div class="card">\
+                  <div class="row row-mod">\
+                    <div class="section-header">Web Directory</div>\
+                  </div>\
+                  <div class="row row-mod">\
+                    <div class="col s12 port-form-container">\
+                      <div class="input-field">\
+                        <input v-on:click="selectLogsPath($event)" v-model="lJson.directory" @blur="updateConfig()" id="server-logs-folder" type="text" class="active" required />\
+                        <label class="active" for="server-logs-folder">Logs Folder</label>\
+                      </div>\
+                    </div>\
+                  </div>\
+                  <div class="row row-mod clearfix">\
+                    <a class="reset-defaults-link" href="#!" v-on:click="resetStorageValues" >Reset To Default Values</a>\
+                  </div>\
+                </div>\
+              </div>\
             </div>\
           </div>',
         mounted: function () {
@@ -176,6 +202,8 @@
         methods: {
           updateConfig: function() {
             fs.writeFileSync(configFile, JSON.stringify(loadJson), 'utf8');
+          },
+          resetStorageValues: function() {
           },
         }
       });
@@ -233,7 +261,6 @@
                         <li>State of the art \'Hole Punching\' software guarantees your server stays online as long as you have a working internet connection</li>\
                         <li>IP Obfuscation hides your IP address and adds an additional layer of security</li>\
                       </ul>\
-                      Fog Machine RPN Service comes with everything you need to get your new server online in seconds. Think of it as your private cloud.\
                     </div>\
                   </div>\
                 </div>\
@@ -330,6 +357,24 @@
         }
       });
 
+      const aboutView = Vue.component('about-view', {
+        template: '\
+          <div>\
+            <div class="row">\
+              <div class="col s12">\
+                <div class="card">\
+                  <div class="about-content-section">\
+                    <div class="about-content-header">Developed By</div>\
+                    <br>\
+                    <div class="about-content-body">Paul Sori</div>\
+                    <div class="about-content-body">paul@fogmachine.io</div>\
+                  </div>\
+                </div>\
+              </div>\
+            </div>\
+          </div>',
+      });
+
       const bootView = Vue.component('boot-view', {
         template: "\
           <div>\
@@ -357,7 +402,8 @@
         components: {
           'server-view': serverView,
           'boot-view': bootView,
-          'auto-dns-view': autoDnsView
+          'auto-dns-view': autoDnsView,
+          'about-view': aboutView
         },
         data: {
           currentViewMain: false
@@ -379,6 +425,14 @@
           return;
         }
         vm.currentViewMain = (loadJson.ddns.tested) ? 'auto-dns-logged-in-view' : 'auto-dns-view';
+        resetNav(this);
+      }
+
+      document.getElementById("nav-about").onclick = function(){
+        if(bootFlag === true) {
+          return;
+        }
+        vm.currentViewMain = 'about-view';
         resetNav(this);
       }
 
