--- a/electron/index3.html
+++ b/electron/index3.html
@@ -199,24 +199,24 @@
       const fileServerBanner = Vue.component('file-banner', {
         template: `
         <div>
-            <div class="row">
-              <div class="col s12">
-                <div class="card">
-                  <div class="row"></div>
-                  <div class="row row-mod">
-                    <div class="col s3">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#FFA000" d="M38 12H22l-4-4H8c-2.2 0-4 1.8-4 4v24c0 2.2 1.8 4 4 4h31c1.7 0 3-1.3 3-3V16c0-2.2-1.8-4-4-4z"/><path fill="#FFCA28" d="M42.2 18H15.3c-1.9 0-3.6 1.4-3.9 3.3L8 40h31.7c1.9 0 3.6-1.4 3.9-3.3l2.5-14c.5-2.4-1.4-4.7-3.9-4.7z"/></svg>
-                    </div>
-                    <div class="col s9">
-                      <div>
-                        A simple file server that's useful for hosting a website or moving files between devices.
-                      </div>
+          <div class="row">
+            <div class="col s12">
+              <div class="card">
+                <div class="row"></div>
+                <div class="row row-mod">
+                  <div class="col s3">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="#FFA000" d="M38 12H22l-4-4H8c-2.2 0-4 1.8-4 4v24c0 2.2 1.8 4 4 4h31c1.7 0 3-1.3 3-3V16c0-2.2-1.8-4-4-4z"/><path fill="#FFCA28" d="M42.2 18H15.3c-1.9 0-3.6 1.4-3.9 3.3L8 40h31.7c1.9 0 3.6-1.4 3.9-3.3l2.5-14c.5-2.4-1.4-4.7-3.9-4.7z"/></svg>
+                  </div>
+                  <div class="col s9">
+                    <div>
+                      A simple file server that's useful for hosting a website or moving files between devices.
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>`
+          </div>
+        </div>`
       });
 
       const serverView = Vue.component('server-view', {
@@ -373,7 +373,7 @@
                     <div class="section-header">Fog Machine RPN Service</div>\
                     <div class="col s12">\
                       <ul class="browser-default">\
-                        <li>Get your own personal domain @ https://your-name.mstream.io</li>\
+                        <li>Get your own personal domain @ https://your-name.fogmachine.io</li>\
                         <li>Automatically configures SSL Encryption for your server</li>\
                         <li>State of the art \'Hole Punching\' software guarantees your server stays online as long as you have a working internet connection</li>\
                         <li>IP Obfuscation hides your IP address and adds an additional layer of security</li>\
@@ -394,7 +394,7 @@
         },
         methods: {
           goToSignUp: function() {
-            shell.openExternal('https://mstream.io/reverse-proxy-network');
+            shell.openExternal('https://fogmachine.io/sign-up.html');
           },
           maybeResetForm: function() {
             if (this.username === '' && this.password === '') {
